# lelisp

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  LICENSE.txt  LISEZMOI  Makefile.in  README.inria  README.md  autogen.sh  configure  configure.ac  configure.bat
386dx/: LISEZ.MOI  Makefile  asclean  asclean.bat  asm-EM64T.sh  asunix.ll  clean.bat  convunix  exp386.ll  expand.ll  faire.assembler  faire.exp  faire.llexpand  faire.masm  flt.c  ll386.llm3  llexpand  llexpand.bat  llm3.ll  mac386.ll  macro386.ll  masm2as.ll  mkcygwin.bat  nlist.c  nlist.def  rw.c  rw.def  rw.ll  rw.lm  rw.lo  rwtest.ll  sedfile.amd64
68k/: 68kern.s  faire.llexpand  llexpand  mac68k.ll  makefile  portfile
C/: Makefile.in  Makeport.in  TODO  bnkern.ll  bnkern.lm  complice.in  config.in  llexpand  llm3tolo.ll  loexpand  modopt.ll  modpeep.ll  modtoc.ll
Celab/: abbrev.le  array.le  bllsht.le  boyer.le  browse.le  callext.le  carcdr.le  chars.le  checkmet.le  cntrl.le  complice.le  ctak.le  date.le  dderiv.le  debug.le  defs.le  defstruct.le  deriv.le  destru.le  div.le  elab-X11.ll  elab-bench.ll  elab-cmplc.ll  elab-llib.ll  elab-llm3.ll  eval.le  evloop.le  extend.le  fft.le  fib20.le  files.le  fntstd.le  format.le  fspecs.le  gc.le  gdate.le  genarith.le  gextern.le  gextmin.le  gfn.le  (+64 more)
GELL/: LISEZ_MOI  PORTER_GELL
benchmarks/: LISEZMOI  README  benchmarks.ll  boyer.ll  boyer.lm  boyer.lo  browse.ll  browse.lm  browse.lo  checkmet.ll  checkmet.lm  checkmet.lo  ctak.ll  ctak.lm  ctak.lo  dderiv.ll  dderiv.lm  dderiv.lo  deriv.ll  deriv.lm  deriv.lo  destru.ll  destru.lm  destru.lo  div.ll  div.lm  div.lo  fft.ll  fft.lm  fft.lo  fft2.lm  fib20.ll  fib20.lm  fib20.lo  fprint.ll  frpoly.ll  makefile  puzzle.ll  puzzle.lm  puzzle.lo  (+18 more)
bignum/: .Version  Makefile  PORTFILES  README  makefile.win32  portfile
ceyx/: LISEZMOI  README  ac.ll  ceyx.ll  ceyxlib.ll  ceyxsrc.ll  compat.ll  coord.ll  cpc.ll  cxcp.ll  cxyacc.ll  cxyaccutils.ll  defrule.ll  describe.ll  initiation.prt  leflip.ll  lex-kit-bib.ll  lex-kit.ll  make.ll  ministream.ll  plotter.ll  prtceyx.prt  stream.ll  union.ll  vprint.ll  vprint.prt
common/: LISEZMOI  README  config.h.in  cstruct.c  evloop.c  fib.c  fibo.c  lelisp.c  lelisp.h  llfloat.c  llfloat31.c  llfloat64.c  llmain.c  llmain.cc  llstdio.c
complice/: INT.ll  MEMO  Makefile.win32  de.ll  local.ll  makefile  ncomplice  ncomplice.bat
cygwin/: LISEZMOI  Makefile  Makemod  Makeport  PortFILES  README  UserFILES  bnkern.lc  bnkern.ll  bnkern.lm  complice  config  ll2lm  loader.lc  loader.ll  loader.lo  makellm3  nlist.c  setenv.bat
freebsd/: LISEZMOI  Makefile  Makeport  README  bnkern.lo  cmplc  complice  config  lelisp64bin  lelispbin  loader.ll  loader.lm  makellm3  newdir
info/: 15200.txt  15202.txt  15203.txt  15204.txt  15211.txt  15212.txt  15213.txt  15221.txt  15222.txt  15231.txt  15232.aux  15232.dvi  15232.ftex  15232.lot  15232.tex  15232.toc  15241.aux  15241.dvi  15241.ftex  15241.tex  15242.aux  15242.dvi  15242.ftex  15242.tex  15242.toc  15251.aux  15251.dvi  15251.ftex  15251.lot  15251.tex  15251.toc  15252-spv.aux  15252-spv.dvi  15252-spv.ftex  15252-spv.tex  15252.aux  15252.dvi  15252.ftex  15252.tex  15253.aux  (+19 more)
linux/: LISEZMOI  Makefile  Makeport  README  bnkern.ll  complice  config  llexpand  makellm3  yum.conf
linuxsparc/: LISEZMOI  Makefile  Makeport  README  SETUP.linuxsparc  WARNING  bnkern.ll  bnkern.lm  bnkern.lo  cll2lm  cmplc++  complice  config  exp.sh  extend.llm3  faire.llexpand  faire.symval  llexpand  lllinuxsparc.llm3  loader.lc  loader.ll  loader.lm  macsol.ll  makellm3  mksymval.ll  save.sh
ll2lm/: TODO  build.lc  build.ll  build.lm  build.lo  codewalker.lc  codewalker.ll  codewalker.lm  codewalker.lo  cpll2lm  create.lc  create.ll  create.lm  create.lo  crunch  crunch.lc  crunch.ll  crunch.lm  crunch.lo  defrtprj.lc  defrtprj.ll  defrtprj.lm  defrtprj.lo  defvar.lc  defvar.ll  defvar.lm  defvar.lo  delete.lc  delete.ll  delete.lm  delete.lo  diagnostic.lc  diagnostic.ll  diagnostic.lm  diagnostic.lo  ill2lm.ll  kernellm.lc  kernellm.ll  kernellm.lm  kernellm.lo  (+47 more)
llib/: LISEZMOI  README  abbrev.ll  array.ll  bngen.ll  bnn.ll  bnq.ll  bnz.ll  callext.ll  compile-ld.ll  complex.ll  cpmac.ll  cstruct.ll  date.ll  debug.ll  defs.ll  defstruct.ll  demowin.ll  edahelp.ll  edhelp.ll  edlin.ll  evloop.ll  fasl.ll  files.ll  finalize.ll  format.ll  fxld.ll  genarith.ll  genr.ll  hanoi.ll  hash.ll  header.ll  libcir.ll  libdate.ll  llcp.ll  llmenu.ll  llpboot.ll  lmcache.ll  loadll2lm.ll  messages.ll  (+43 more)
llm3/: LISEZMOI  README  bllsht.llm3  carcdr.llm3  chars.llm3  cntrl.llm3  eval.llm3  extend.llm3  fntstd.llm3  fspecs.llm3  gc.llm3  llinit.llm3  macroch.llm3  number.llm3  physio.llm3  print.llm3  read.llm3  specnb.llm3  string.llm3  symbs.llm3  testllm3.llm3  toperr.llm3
llmod/: LISEZMOI  README  abbrev.lc  abbrev.lm  array.lc  array.lm  bngen.lc  bngen.lm  bnn.lc  bnn.lm  bnq.lc  bnq.lm  bnz.lc  bnz.lm  callext.lc  callext.lm  complex.lc  complex.lm  complice.lm  countcalls.lc  countcalls.lm  cpmac.lc  cpmac.lm  croch.lc  croch.lm  cstruct.lc  date.lc  date.lm  debug.lc  debug.lm  defs.lc  defs.lm  defstruct.lc  defstruct.lm  defun.lc  defun.lm  edlin.lc  edlin.lm  evloop.lc  evloop.lm  (+105 more)
llobj/: LISEZMOI  README  abbrev.lo  array.lo  bngen.lo  bnq.lo  bnz.lo  callext.lo  complex.lo  complice.lo  countcalls.lo  cpmac.lo  croch.lo  date.lo  debug.lo  defs.lo  defstruct.lo  defun.lo  edlin.lo  evloop.lo  fasl.lo  files.lo  finalize.lo  format.lo  genarith.lo  genr.lo  hash.lo  libcir.lo  libdate.lo  llcp.lo  lledit.lo  lleditor.lo  llmenu.lo  llpboot.lo  lmcache.lo  loadfile.lo  macedit.lo  maceditor.lo  meme.lo  messages.lo  (+33 more)
lltest/: LISEZMOI  README  benchbignum.ll  bignum.lt  bntestq.ll  bvX11.lt  bvcolor.lt  bvdata.lt  bvnb.lt  bvx11test  bztest.c  cir.lt  cmpfpu.rec.ll  cmplc.rec.ll  complex.lt  cpl.lt  date.lt  defrtprj.ll  eval.ll  extern.lt  extmin.lt  files.lt  float.lt  fn.lt  format.lt  fortran.lt  fromc.c  fromc.ll  gc-in-recette.txt  gckiller.ll  genr.lt  hash.lt  lap.lt  lefpu.rec.ll  lelisp-rec.ll  lelisp.rec.ll  (+74 more)
(+1594 files in other folders)
